fix 头部图片z-index问题

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -122,6 +122,7 @@ li{
 .blog__bighead{
 
     position: relative;
+    z-index: -99;
 
     padding-top: 100px;
     width: 960px;
